--- a/page.css
+++ b/page.css
@@ -44,6 +44,15 @@ body{
 	opacity:0.4;
 }
 
+.window.maximized{
+	position:absolute;
+	top:0 !important;
+	left:0 !important;
+	width:100% !important;
+	height:100% !important;
+	z-index: 10;
+}
+
 @keyframes window-open{
 	from{
 		transform: scale(0);
@@ -72,6 +81,7 @@ body{
 	border-radius: 0.1vw;
 	background-color:#2a3493;
 	border: 0.12vw #0004 solid;
+	overflow:clip;
 }
 
 .window .windowhead .button{
@@ -87,6 +97,25 @@ body{
 	font-size: 1vw;
 	line-height: 0.76vw;
 	text-align: center;
+}
+
+.window .windowhead .button:active{
+	border: 0.2vw #424549 solid;
+	border-top-color: #626362;
+	border-left-color: #626362;
+	background-color: #888;
+	box-shadow: 0.1vw 0.1vw 0.05vw #0008;
+}
+
+@keyframes button-walk{
+	to{
+		position:relative;
+		bottom:2vw;
+	}
+	from{
+		position:relative;
+		bottom:0;
+	}
 }
 
 .window .windowhead .title{
