--- a/page.css
+++ b/page.css
@@ -142,6 +142,8 @@ body{
 	position:sticky;
 	min-height: 100vh;
 	overflow-x:hidden;
+	box-sizing:border-box;
+	border-bottom:10px solid black;
 }
 
 .page1{
