--- a/page.css
+++ b/page.css
@@ -143,7 +143,7 @@ body{
 	min-height: 100vh;
 	overflow-x:hidden;
 	box-sizing:border-box;
-	border-bottom:10px solid black;
+	/*border-bottom:10px solid black;*/
 }
 
 .page1{
