--- a/page.css
+++ b/page.css
@@ -142,7 +142,7 @@ body{
 .page{
 	position:sticky;
 	min-height: 100vh;
-	overflow-x:hidden;
+	/*overflow-x:hidden;*/
 	box-sizing:border-box;
 	/*border-bottom:10px solid black;*/
 }
