--- a/page2.css
+++ b/page2.css
@@ -304,6 +304,44 @@
     content:"";
 }
 
+.page2 .wall .postshadow{
+    position: absolute;
+    left:calc(50% + var(--post-container-pos));
+    bottom: calc(var(--post-container-base-height) - var(--bottom-height) - 2vh);
+    border-radius: 1vh;
+    width: var(--post-container-width);
+    height: var(--post-container-height);
+    
+    background-color: var(--shadow-color);
+    filter:blur(0.2vh);
+}
+
+.page2 .wall .postshadow::after{
+    position: absolute;
+    left:30%;
+    right:30%;
+    top: 100%;
+    height: calc(var(--post-container-base-height) - 5.7vh);
+    content:"";
+    
+    background-color: var(--shadow-color);
+}
+
+.page2 .floor .pshadow{
+    position:absolute;
+    --height: var(--post-container-depth);
+    bottom:calc(var(--bottom-height) * 4 - var(--height));
+    height:var(--height);
+    left: 50%;
+    width: 4vh;
+    background-color: var(--shadow-color);
+    
+    transform-origin: top;
+    transform:translateX(34.2vh);
+    
+    filter:blur(0.2vh);
+}
+
 .page2 .credit{
     z-index: 1000;
     position: absolute;
